[Layout] fixed the layout to be better on mobile

--- a/app/assets/stylesheets/content_blocks/text_with_logo_block.scss
+++ b/app/assets/stylesheets/content_blocks/text_with_logo_block.scss
@@ -31,6 +31,7 @@
 						order: 1;
 						flex-basis: 50%;
 					}
+					&.text-block,
 					&.text-with-logo-block {
 						order: 2;
 					}
